# chess-2

./: CMakeLists.txt  board.cc  board.hh  bulk_movegen.cc  bulk_movegen.hh  eval.hh  logging.cc  lut.cc  lut.hh  magicfactors.hh  move_picker.cc  move_picker.hh  myeval.cc  pesto.cc  random.cc  readme.md  search.cc  search.hh  seq_movegen.cc  seq_movegen.hh  server.cc  tt.cc  tt.hh  uci.cc  uci.hh  util.hh
